--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.someone.sendsms">
+    <uses-permission android:name="android.permission.SEND_SMS" />
 </manifest>
